kustomize/base/NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-to-mongo
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: mongo 
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: my-app  
      ports:
        - protocol: TCP
          port: 27017
